--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@supabase/supabase-js": "^2.55.0",
     "@types/ws": "^8.18.1",
     "@vercel/analytics": "^1.5.0",
+    "chart.js": "^4.5.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "ws": "^8.18.3"
   },
